re PR target/20795 (ICE in assign_parms)

PR target/20795
	* config/i386/i386.c (construct_container): Pass empty aligned
	struct, union or class in memory.

	* g++.dg/abi/param2.C: New test.

From-SVN: r97914