gcc/config/i386/i386.c
@@ -2657,6 +2657,11 @@ construct_container (enum machine_mode mode, enum machine_mode orig_mode,
 	    abort ();
 	}
     }
+
+  /* Empty aligned struct, union or class.  */
+  if (nexps == 0)
+    return NULL;
+
   ret =  gen_rtx_PARALLEL (mode, rtvec_alloc (nexps));
   for (i = 0; i < nexps; i++)
     XVECEXP (ret, 0, i) = exp [i];
